<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_account"
        >
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_key_current_user_remember"
            android:summary="@string/pref_description_remember"
            android:summaryOff="@string/pref_description_remember_off"
            android:summaryOn="@string/pref_description_remember_on"
            android:title="@string/pref_title_remember"
            />
        <EditTextPreference
            android:defaultValue="@string/pref_user_default"
            android:key="pref_key_current_user_name"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_user_title"
            />
        <EditTextPreference
            android:defaultValue="@string/pref_password_default"
            android:key="pref_key_current_user_password"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_password_title"
            />
    </PreferenceCategory>

</PreferenceScreen>